fix: ajustando z-index do modal

--- a/client-side/src/app/components/arf-oversight-page/comum/arf-modal/arf-modal.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/comum/arf-modal/arf-modal.component.scss
@@ -3,7 +3,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 999;
+  z-index: 9999;
   width: 100vw;
   height: 100vh;
   background-color: #0000005b;
